--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,32 @@
-body{
-    font-size: 5rem;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+#header{
+    width: 100%;
+    
+}
+
+#logo-big{
+    background-color: aquamarine;
+    width: 50%;
+    height: 50px;
+    float: left;
+    line-height: 25px;
+}
+#navigation-list{
+    background-color: aqua;
+    width: 50%;
+    height: 50px;
+    float: right;
+    list-style: none;
+}
+
+.nav-item{
+    display: inline-block;
+    width: 19%;
+    line-height: 50px;
+
+
 }
