--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,18 @@
 
 #header{
     width: 100%;
+    height: 50px;
+    background-color: antiquewhite;
     
 }
 
 #logo-big{
-    background-color: aquamarine;
-    width: 50%;
+    width: 30%;
     height: 50px;
     float: left;
     line-height: 25px;
 }
 #navigation-list{
-    background-color: aqua;
     width: 50%;
     height: 50px;
     float: right;
@@ -27,6 +27,28 @@
     display: inline-block;
     width: 19%;
     line-height: 50px;
+}
 
+#carousel{
+    background-image: url(../images/house-plants-t.webp);
+    height: 300px;
+    width: auto;
+    background-size: contain;
+}
 
+#about-container{
+    margin-top: 100px;
+    height: 350px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.about-item{
+}
+
+#owner-picture{
+    background-image: url("../images/eric.png");
+    width:100%;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
