--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,300;1,100&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
 }
 
+body{
+    font-family: poppins;
+}
 #header{
     position: fixed;
     width: 100%;
-    height: 50px;
+    height: 80px;
     background-color: rgba(48, 139, 29, 0.534);
 
     
@@ -17,6 +23,9 @@
     height: 50px;
     float: left;
     line-height: 25px;
+    margin-left: 5%;
+    margin-top: 20px
+
 }
 #navigation-list{
     width: 50%;
@@ -28,7 +37,7 @@
 .nav-item{
     display: inline-block;
     width: 19%;
-    line-height: 50px;
+    line-height: 80px;
 }
 
 #carousel{
@@ -36,33 +45,58 @@
     background-image: url(../images/house-plants-t.webp);
     background-repeat: no-repeat;
     width: 100%;
-    height: 200px;
+    height: 300px;
     background-size: cover;
     background-position: center;
-    
+}
+
+#fun-quote{
+    margin-top: -100px;
+    background-color: rgba(255, 228, 196, 0.527);
+    text-align: center;
+}
+#fun-quote span{
+    font-size: xx-large;
 }
 
 #about-container{
-    margin-top: 100px;
-    height: 350px;
-    display: grid;
-    grid-template-columns: 1fr 0.5fr 1fr;
-    grid-template-rows: auto;
-    
-    
+    background-color: rgba(255, 228, 196, 0.582);
+    margin-top: 0px;
+    height: 500px;
+    display: flex;
 }
 
 .about-item{
-    /* position: relative; */
+    max-width: 100%;
+    margin: auto 0;
+
+}
+
+.about-item h2{
+    font-size: x-large;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.about-item p{
+    font-size: x-large;
+    padding-bottom: 20px;
+    text-align: right;
+    margin: 0 20px;
 }
 
 #owner-picture{
-    background-image: url("../images/eric.png");
+    order: 2;
+   
     background-repeat: no-repeat;
     background-size:cover;
-    background-position: center;
-    height: 60vh;
-    width: 60vh;
+    background-position:top;
+    margin-right: 20px;
+    min-width: 500px;
+    border-radius: 50%;
+    background-image: radial-gradient(rgba(239, 247, 16, 0) 0%, rgba(43, 126, 10, 0.281)), url(
+'../images/eric.png');
+    box-shadow: 10px 0px 40px rgba(34, 34, 34, 0.884);
  
 }
 
