--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,300;1,100&display=swap');
 
-
+/* remove from html standards */
 * {
     margin: 0;
     padding: 0;
 }
 
+/*set font for whole page */
 body{
     font-family: poppins;
 }
+
+/* header */
 #header{
     position: fixed;
     width: 100%;
     height: 80px;
-    background-color: rgba(48, 139, 29, 0.534);
+    font-size: 1.5;
+    text-transform: uppercase;
+    background-color: rgba(47, 139, 29, 0.877);
 
     
 }
 
 #logo-big{
-    width: 30%;
+    width: 25%;
     height: 50px;
     float: left;
     line-height: 25px;
     margin-left: 5%;
-    margin-top: 20px
+    margin-top: 20px;
+    text-shadow: 0px 0px 10px rgb(0, 0, 0);
 
 }
 #navigation-list{
-    width: 50%;
+    width: 65%;
     height: 50px;
     float: right;
     list-style: none;
+    font-size:larger;
+    text-align: right;
+    text-align: center;
 }
 
 .nav-item{
@@ -40,28 +49,43 @@ body{
     line-height: 80px;
 }
 
-#carousel{
+/* carousel */
 
-    background-image: url(../images/house-plants-t.webp);
-    background-repeat: no-repeat;
+#carousel-container{
     width: 100%;
-    height: 300px;
-    background-size: cover;
-    background-position: center;
+    height: 500px;
+    clear: both;
+    background-color: rgb(38, 85, 126);
+    z-index: 100;
+    
+
+}
+#carousel{
+    background-image: url(../images/house-plants-t.webp);
+    height: 100%;
+    animation-name: slow-zoom;
+    animation-duration: 3s;
 }
 
-#fun-quote{
-    margin-top: -100px;
-    background-color: rgba(255, 228, 196, 0.527);
+#fun-quote-container{
+    margin-top: -80px;
+    background-color: rgba(255, 228, 196, 0.808);
     text-align: center;
+    height: 80px;
+}
+#fun-quote-text{
+    animation-name: slide-in;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+
 }
 #fun-quote span{
     font-size: xx-large;
 }
 
+/* about section */
 #about-container{
     background-color: rgba(255, 228, 196, 0.582);
-    margin-top: 0px;
     height: 500px;
     display: flex;
 }
@@ -83,10 +107,12 @@ body{
     padding-bottom: 20px;
     text-align: right;
     margin: 0 20px;
+    font-style: italic;
 }
 
 #owner-picture{
     order: 2;
+    margin-top: -20px;
    
     background-repeat: no-repeat;
     background-size:cover;
@@ -100,8 +126,38 @@ body{
  
 }
 
+
+/* footer */
+
 #footer-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
 }
+
+
+/* psuedo */
+
+.nav-item:hover{
+    color:white;
+}
+.nav-item:active{
+    color: white;
+}
+
+/* animations */
+@keyframes slide-in {
+    from{margin-right: 100%}
+    to{margin-right: 0%}
+    
+}
+/* 
+@keyframes slow-zoom {
+    from{
+        transform: scale(1)
+    }
+    to{
+        transform: scale(1.1)
+    }
+    
+} */
