--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,11 +53,8 @@ body{
 
 #carousel-container{
     width: 100%;
-    height: 500px;
-    clear: both;
-    background-color: rgb(38, 85, 126);
-    z-index: 100;
-    
+    height: 300px;
+    overflow: hidden;
 
 }
 #carousel{
@@ -69,15 +66,18 @@ body{
 
 #fun-quote-container{
     margin-top: -80px;
-    background-color: rgba(255, 228, 196, 0.808);
+    background-color: rgba(255, 228, 196, 0.562);
     text-align: center;
     height: 80px;
 }
 #fun-quote-text{
+    height: 80px;
+    padding: auto;
     animation-name: slide-in;
     animation-duration: 3s;
     animation-fill-mode: forwards;
-
+    overflow: hidden;
+    position: relative;
 }
 #fun-quote span{
     font-size: xx-large;
@@ -91,7 +91,7 @@ body{
 }
 
 .about-item{
-    max-width: 100%;
+    width: 100%
     margin: auto 0;
 
 }
@@ -147,17 +147,7 @@ body{
 
 /* animations */
 @keyframes slide-in {
-    from{margin-right: 100%}
-    to{margin-right: 0%}
+    from{right: 100%}
+    to{right: 0%}
     
 }
-/* 
-@keyframes slow-zoom {
-    from{
-        transform: scale(1)
-    }
-    to{
-        transform: scale(1.1)
-    }
-    
-} */
