--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 /*set font for whole page */
 body{
     font-family: poppins;
+    overflow-x: hidden;
 }
 
 /* header */
@@ -30,7 +31,8 @@ body{
     line-height: 25px;
     margin-left: 5%;
     margin-top: 20px;
-    text-shadow: 0px 0px 10px rgb(0, 0, 0);
+    text-shadow: 40x 20px 20px rgb(0, 0, 0);
+    text-shadow: 0px 0px 4px rgb(205, 255, 217);
 
 }
 #navigation-list{
@@ -76,6 +78,7 @@ body{
     animation-name: slide-in;
     animation-duration: 3s;
     animation-fill-mode: forwards;
+    animation-timing-function: ease-out;
     overflow: hidden;
     position: relative;
 }
@@ -86,12 +89,14 @@ body{
 /* about section */
 #about-container{
     background-color: rgba(255, 228, 196, 0.582);
-    height: 500px;
-    display: flex;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .about-item{
-    width: 100%
+    width: 100%;
+    height: auto;
     margin: auto 0;
 
 }
@@ -111,14 +116,15 @@ body{
 }
 
 #owner-picture{
-    order: 2;
+    
     margin-top: -20px;
    
     background-repeat: no-repeat;
     background-size:cover;
     background-position:top;
+    width: 400px;
+    height: 400px;
     margin-right: 20px;
-    min-width: 500px;
     border-radius: 50%;
     background-image: radial-gradient(rgba(239, 247, 16, 0) 0%, rgba(43, 126, 10, 0.281)), url(
 '../images/eric.png');
@@ -150,4 +156,8 @@ body{
     from{right: 100%}
     to{right: 0%}
     
+}
+
+@media screen and(max-width: 950px){
+
 }
