--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 
 /*set font for whole page */
 body{
+    max-width: 100%;
     font-family: poppins;
     overflow-x: hidden;
 }
@@ -20,6 +21,7 @@ body{
     font-size: 1.5;
     text-transform: uppercase;
     background-color: rgba(47, 139, 29, 0.877);
+    
 
     
 }
@@ -31,7 +33,6 @@ body{
     line-height: 25px;
     margin-left: 5%;
     margin-top: 20px;
-    text-shadow: 40x 20px 20px rgb(0, 0, 0);
     text-shadow: 0px 0px 4px rgb(205, 255, 217);
 
 }
@@ -43,6 +44,7 @@ body{
     font-size:larger;
     text-align: right;
     text-align: center;
+    text-shadow: 0px 0px 4px rgb(205, 255, 217);
 }
 
 .nav-item{
@@ -62,8 +64,7 @@ body{
 #carousel{
     background-image: url(../images/house-plants-t.webp);
     height: 100%;
-    animation-name: slow-zoom;
-    animation-duration: 3s;
+
 }
 
 #fun-quote-container{
@@ -91,7 +92,7 @@ body{
     background-color: rgba(255, 228, 196, 0.582);
     height: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
 }
 
 .about-item{
@@ -124,7 +125,6 @@ body{
     background-position:top;
     width: 400px;
     height: 400px;
-    margin-right: 20px;
     border-radius: 50%;
     background-image: radial-gradient(rgba(239, 247, 16, 0) 0%, rgba(43, 126, 10, 0.281)), url(
 '../images/eric.png');
@@ -138,6 +138,7 @@ body{
 #footer-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    height: 100px;
     text-align: center;
 }
 
@@ -158,6 +159,37 @@ body{
     
 }
 
-@media screen and(max-width: 950px){
+@media screen and (max-width: 650px){
+   
+    #header{
+        position: static;
+    }
+
+    #logo-big{
+        width: 100%;
+        position: static;
+    }
+    
+    #navigation-list{
+        top: 100px;
+        width: 100%;
+        line-height: 50px;
+    }
+   
+
+    .nav-item{
+        font-size: xx-small;
+        width: 17%;
+        line-height: 20px;
+
+    }
+
+    #about-container{
+        grid-template-columns: 1fr;
+    }
+    #carousel{
+        background-position: center;
+    }
+
 
 }
