--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,10 +17,11 @@ body{
 #header{
     position: fixed;
     width: 100%;
-    height: 80px;
+    height: 70px;
     font-size: 1.5;
     text-transform: uppercase;
     background-color: rgba(47, 139, 29, 0.877);   
+    z-index: 100;
 }
 
 #logo-big{
@@ -34,14 +35,17 @@ body{
 
 }
 #navigation-list{
+    position: sticky;
+    top: 0px;
     width: 65%;
     height: 50px;
     float: right;
     list-style: none;
-    font-size:larger;
-    text-align: right;
+    font-size: larger;
     text-align: center;
     text-shadow: 0px 0px 4px rgb(205, 255, 217);
+    
+
 }
 
 .nav-item{
@@ -70,6 +74,9 @@ body{
     text-align: center;
     height: 80px;
 }
+#fun-quote-container p{
+    font-size: x-large;
+}
 #fun-quote-text{
     height: 80px;
     padding-top: 10px;
@@ -80,9 +87,7 @@ body{
     overflow: hidden;
     position: relative;
 }
-#fun-quote span{
-    font-size: xx-large;
-}
+
 
 /* about section */
 #about-container{
@@ -138,6 +143,7 @@ body{
     background-color: rgba(255, 228, 196, 0.582);
    }
 .video{
+    box-shadow: 10px 10px 30px;
 }
 
 .video-description{
@@ -176,6 +182,13 @@ body{
 .nav-item:active{
     color: white;
 }
+#logo-big:hover{
+    color: white;
+}
+
+#owner-picture:hover{
+    transform: scale(1.2);
+}
 
 /* animations */
 @keyframes slide-in {
@@ -187,7 +200,7 @@ body{
 @media screen and (max-width: 650px){
    
     #header{
-        position: static;
+        /* position: static; */
     }
 
     #logo-big{
@@ -196,9 +209,10 @@ body{
     }
     
     #navigation-list{
-        top: 100px;
+        margin-top:px;
         width: 100%;
         line-height: 50px;
+        background-color: rgba(255, 228, 196, 0.582);
     }
    
 
