--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ body{
 }
 #fun-quote-text{
     background-color: rgba(255, 228, 196, 0.562);
-    height: 80px;
+    height: 70px;
     padding-top: 10px;
     animation-name: slide-in;
     animation-duration: 3s;
@@ -128,7 +128,7 @@ body{
 #owner-picture{
     
     margin-top: -20px;
-   
+   z-index: 100;
     background-repeat: no-repeat;
     background-size:cover;
     background-position:top;
