--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,11 +56,16 @@ body{
 
 /* carousel */
 
+#main-picture{
+    height:500px;
+    overflow: hidden;
+    position: relative;
+}
+
 #carousel-container{
     width: 100%;
-    height: 300px;
+    height: 500px;
     overflow: hidden;
-  
 
 }
 #carousel{
@@ -70,12 +75,62 @@ body{
     animation-duration: 10s;
     animation-fill-mode: forwards;
     z-index: -100;
+    position: relative;
+}
 
+#awesome-quote{
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    width: 50%;
+    background-color: rgba(30, 85, 4, 0.801);
+    color: rgb(239, 245, 236);
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+#awesome-quote h2{
+    text-align: center;
+}
+.about-item{
+    position: absolute;
+    background-color: rgba(56, 196, 44, 0.822);
+
+    top: 130px; 
+    left: 70px;
+    height: auto;
+
+}
+
+.about-item h2{
+
+}
+
+.about-item p{
+
+}
+
+
+#owner-picture{
+    
+    position: absolute;
+    bottom: 100px;
+    right: 100px;
+   z-index: 100;
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position:top;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background-image: url("../images/eric.png");
+    box-shadow: 0px 0px 20px black;
+ 
 }
 
 #fun-quote-container{
     margin-top: -80px;
-   
+   overflow: hidden;
     text-align: center;
     height: 80px;
     z-index: 100;
@@ -84,7 +139,7 @@ body{
     font-size: x-large;
 }
 #fun-quote-text{
-    background-color: rgba(255, 228, 196, 0.562);
+    background-color: rgba(255, 228, 196, 0.87);
     height: 70px;
     padding-top: 10px;
     animation-name: slide-in;
@@ -102,43 +157,6 @@ body{
     height: auto;
     display: grid;
     grid-template-columns: 2fr 1fr;
-}
-
-.about-item{
-    width: 100%;
-    height: auto;
-    margin: auto 0;
-
-}
-
-.about-item h2{
-    font-size: x-large;
-    padding-bottom: 20px;
-    text-align: center;
-}
-
-.about-item p{
-    font-size: x-large;
-    padding-bottom: 20px;
-    text-align: right;
-    margin: 0 20px;
-    font-style: italic;
-}
-
-#owner-picture{
-    
-    margin-top: -20px;
-   z-index: 100;
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position:top;
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-image: radial-gradient(rgba(239, 247, 16, 0) 0%, rgba(43, 126, 10, 0.281)), url(
-'../images/eric.png');
-    box-shadow: 10px 0px 40px rgba(34, 34, 34, 0.884);
- 
 }
 
 /* video section */
@@ -228,11 +246,24 @@ body{
         background-color: rgba(255, 228, 196, 0.582);
     }
    
+    #awesome-quote{
+        font-size: 80%;
+    }
 
     .nav-item{
         font-size: xx-small;
         width: 17%;
         line-height: 20px;
+
+    }
+
+    list
+
+    #owner-picture {
+        visibility: hidden;
+    }
+
+    .about-item {
 
     }
 
@@ -245,10 +276,35 @@ body{
 
     #video-container{
         grid-template-columns: 1fr;
-        }
+
+        /* }
+    .video{
+    position: absolute;
+    }
 
     #footer{
         
+    } */
+ }
+
+
+@media screen and (max-width: 1000px){
+    #awesome-quote{
+        height: auto;
+        width: 80%;
+        left: 10%;
+        right: 10%;
+        top: 130px;
+        bottom: auto;
+    }
+    #owner-picture{
+        visibility: hidden;
     }
 
+    .about-item{
+        width: 80%
     }
+
+    
+
+}
