--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,96 @@ body{
     position: absolute;
     height: 100%;
     width: 100%;
-    background-image: url("../images/small-plant.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    z-index: 1000;
+    padding: 0;
 }
+#welcome-animation-top{
+    position: absolute;
+    background-color: rgb(51, 124, 8);
+    height: 50%;
+    width: 50%;
+    font-size: 3vw;
+    z-index: 2020;
+    animation-name: welcome-slide-up;
+    animation-delay: 1s;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+}
+
+#we{
+    position: absolute;
+    background-color: rgba(14, 102, 11, 0);
+    z-index: 2030;
+    bottom: 0px;
+    right: 0px;
+    }
+
+#welcome-animation-right{
+    position: absolute;
+    background-color: rgb(14, 85, 8);
+    
+    height: 50%;
+    width: 50%;
+    top: 0;
+    font-size: 3vw;
+    right: 0px;
+    z-index: 2015;
+    animation-name: welcome-slide-right;
+    animation-delay: 1.1s;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+}
+
+#l{
+    position: absolute;
+    z-index: 2030;
+    bottom: 0px;
+    left: 0px;
+    }
+
+#welcome-animation-bottom{
+    position: absolute;
+    background-color: rgb(9, 66, 22);
+  
+    height: 50%;
+    width: 50%;
+    font-size: 3vw;
+    bottom: 0;
+    right: 0;
+    z-index: 2016;
+    animation-name: welcome-slide-bottom;
+    animation-delay: 1.3s;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    }
+
+#me{
+        position: absolute;
+        background-color: rgba(25, 0, 255, 0);
+        z-index: 2030;
+        top: 0px;
+        left: 0px;
+        }
+
+#welcome-animation-left{
+    position: absolute;
+    background-color: rgb(6, 58, 19);
+    height: 50%;
+    width: 50%;
+    bottom: 0;
+    left: 0;
+    z-index: 2013;
+    font-size: 3vw;;
+    animation-name: welcome-slide-left;
+    animation-delay: 1.7s;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+}
+#co{
+    position: absolute;
+    z-index: 2030;
+    top: 0px;
+    right: 0px;
+    }
 /* header */
 #header{
     position: fixed;
@@ -32,7 +116,7 @@ body{
     min-height: 70px;
     text-transform: uppercase;
     background-color: rgba(47, 139, 29, 0.877);   
-    z-index: 101;
+    z-index: 1003;
 }
 
 #logo-big{
@@ -222,6 +306,47 @@ body{
     }
     to{
         margin-left: 0;
+    }
+    
+}
+/* welcome animation */
+
+@keyframes welcome-slide-up {
+    from{
+        top: 0;
+    }
+    to{
+        top: -100%;
+    }
+    
+}
+
+@keyframes welcome-slide-right {
+    from{
+        right: 0;
+    }
+    to{
+        right: -100%;
+    }
+    
+}
+
+@keyframes welcome-slide-bottom {
+    from{
+        bottom: 0;
+    }
+    to{
+        bottom: -100%;
+    }
+    
+}
+
+@keyframes welcome-slide-left {
+    from{
+        left: 0;
+    }
+    to{
+        left: -100%;
     }
     
 }
