--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,21 +15,22 @@ body{
 
 /* welcome-animation */
 #welcome-animation{
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
     padding: 0;
     overflow: hidden;
+    z-index: 6000;
 }
 #welcome-animation-top{
     position: absolute;
-    background-color: rgba(127, 255, 212, 0.479);
+    background-color: rgb(238, 238, 238);
     height: 50%;
     width: 50%;
     font-size: 3vw;
     z-index: 2020;
     animation-name: welcome-slide-up;
-    animation-delay: 1s;
+    animation-delay: 2s;
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
@@ -38,15 +39,15 @@ body{
     position: absolute;
     background-image: url("../images/upper-left.png");
     background-size: contain;
-    background-repeat: no-repeat;
-    z-index: 2030;
-    bottom: -2%;
+    bottom: 0;
     right: 0;
+    background-position: bottom right;
+    background-repeat: no-repeat;
     }
 
 #welcome-animation-right{
     position: absolute;
-    background-color: rgb(119, 0, 119);
+    background-color: rgb(255, 255, 255);
     height: 50%;
     width: 50%;
     top: 0;
@@ -54,7 +55,7 @@ body{
     right: 0px;
     z-index: 2015;
     animation-name: welcome-slide-right;
-    animation-delay: 1.1s;
+    animation-delay: 2.1s;
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
@@ -62,17 +63,16 @@ body{
 #lc{
     position: absolute;
     background-image: url("../images/upper-right.png");
-    background-size: contain;
     background-repeat: no-repeat;
-    z-index: 2030;
-    bottom: 0px;
+    background-size: contain;
+    background-position: bottom left;
+    bottom: 0;
     left: 0;
-    background-position: bottom;
 }
 
 #welcome-animation-bottom{
     position: absolute;
-    background-color: rgb(9, 66, 22);
+    background-color: rgb(245, 245, 245);
   
     height: 50%;
     width: 50%;
@@ -81,7 +81,7 @@ body{
     right: 0;
     z-index: 2016;
     animation-name: welcome-slide-bottom;
-    animation-delay: 1.3s;
+    animation-delay: 2.3s;
     animation-duration: 3s;
     animation-fill-mode: forwards;
     }
@@ -94,12 +94,12 @@ body{
         z-index: 2030;
         top: 0px;
         right: 0;
-        background-position: top;
+        background-position: top right;
     }
 
 #welcome-animation-left{
     position: absolute;
-    background-color: rgb(6, 58, 19);
+    background-color: rgb(216, 216, 216);
     height: 50%;
     width: 50%;
     bottom: 0;
@@ -107,7 +107,7 @@ body{
     z-index: 2013;
     font-size: 3vw;;
     animation-name: welcome-slide-left;
-    animation-delay: 1.7s;
+    animation-delay: 2.7s;
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
@@ -120,7 +120,7 @@ body{
     z-index: 2030;
     top: 0px;
     left: 0;
-    width: 20%;
+    background-position: top left;
 }
 /* header */
 #header{
@@ -208,7 +208,9 @@ body{
     margin-top: 50px;
     background-color: rgba(255, 228, 196, 0.87);
     text-align: center;
+    margin-left: -100%;
     animation-name: slide-in;
+    animation-delay: 3s;
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
@@ -223,18 +225,19 @@ body{
 #flip-card-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    background-color: bisque;
-    width: 100%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: rgb(255, 255, 255);
+    width: 80%;
+    height: 300px;
+    margin-left: 10%;
+    margin-right: 10%;
+    overflow: hidden;
 }
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
     background-color: transparent;
     float: left;
-    width: auto;
+    width: 100px;
     height: auto;
     min-height: 200px;
     /* border: 1px solid #f1f1f1; */
@@ -244,7 +247,7 @@ body{
   /* This container is needed to position the front and back side */
   .flip-card-inner {
     position: relative;
-    width: 100%;
+    width: 300px;
     height: 100%;
     text-align: center;
     transition: transform 0.8s;
@@ -288,6 +291,7 @@ body{
     grid-template-columns: 1fr 1fr 1fr;
     height: 100px;
     text-align: center;
+    z-index: 5000;
 }
 
 #opened{
