--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,300;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,100;1,200;1,300;1,700&display=swap');
 
 /* remove from html standards */
 * {
@@ -8,13 +8,19 @@
 
 /*set font for whole page */
 body{
-    max-width: 100%;
+    
+    
+    width: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
     font-family: poppins;
+    font-weight: 200;
     overflow-x: hidden;
 }
 
 /* welcome-animation */
-#welcome-animation{
+/* #welcome-animation{
     position: fixed;
     height: 100%;
     width: 100%;
@@ -121,16 +127,17 @@ body{
     top: 0px;
     left: 0;
     background-position: top left;
-}
+} */
 /* header */
 #header{
-    position: fixed;
-    width: 100%;
+
     height: auto;
-    min-height: 70px;
+    min-height: 80px;
     text-transform: uppercase;
-    background-color: rgba(47, 139, 29, 0.877);   
+    background-color: rgba(255, 255, 255, 0.877);   
     z-index: 1003;
+    display:grid;
+    grid-template-columns: 1fr 3fr;
 }
 
 #logo-big{
@@ -141,148 +148,88 @@ body{
 }
 
 #logo-big p{
-    font-size: xx-small;
+    font-size: 1rem;
 }
 
 #navigation-list{
-    top: 0px;
-    width: auto;
-    height: 50px;
-    float: right;
+
+    background-color: rgba(255, 255, 255, 0.877);
+
+    width: 100%;
+    min-width: 100%;
     list-style: none;
-    font-size: larger;
-    text-align: center;
+    font-size: 1.5rem;
+    text-align: right;
     text-shadow: 0px 0px 4px rgb(205, 255, 217)
 }
 
 .nav-item{
-    display: inline;
+    float: right;
+    margin: 0  2rem;
     line-height: 70px;
-    margin: 0 15px;
 }
 
 /* presentation */
 
-#presentation{
-    background-image: url(../images/house-plants-t.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: auto;
-    padding-top: 100px;
-    width: 100%;
+#presentation-container{
+    background-image: url("../wood-plants.jpg");
+    height: 40rem;
+    
 }
 
-#awesome-quote{
-    height: auto;
-    margin: 10px 50px 10px 12%;
-    margin-top: 50px;
-    min-height: 200px;
-    font-size: 1.7rem;
-    background-color: rgba(30, 85, 4, 0.801);
-    color: rgb(239, 245, 236);
-    text-align: left;
-    padding-right: 10px;
-    border-radius: 10px;
-   }
-
-   #awesome-quote h2{
-       text-align: center;
-   }
-
-#owner-picture{
-    z-index: 100;
-    position: relative;
-    margin-left: -10%;
-    float: left;
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position:top;
-    width: 18vw;
-    height: 18vw;
+#presentation{
+    position: absolute;
+    top: 14rem;
+    left: 5%;
+    width: 90rem;
+    max-width: 90%;
+    background-color: aquamarine;
+    border-radius: 100px 10px  10px 10px;
+}
+#plant-guy{
+    margin-top: -1rem;
+    margin-left: -1rem;
+    margin-right: 1rem;
+    height: 20rem;
+    width: 20em;
     border-radius: 50%;
-    background-image: url("../images/eric.png");
+    float: left;
     box-shadow: 0px 0px 20px black;
 }
 
-#fun-quote-text{
-    margin-top: 50px;
-    background-color: rgba(255, 228, 196, 0.87);
+#presentation p, #presentation h2{
+    text-align: justify;
+    font-size: 2rem;
+    padding-left: 3rem;
+    padding-right: 2rem;
+}
+#fun-quote-text {
+    margin-top: 5rem;
     text-align: center;
-    margin-left: -100%;
     animation-name: slide-in;
-    animation-delay: 3s;
-    animation-duration: 3s;
+    animation-duration: 2s;
     animation-fill-mode: forwards;
-}
+    margin-bottom: 10rem;
+} 
 
-/* about section */
-#about-section{
-    margin-top: 50px;   
-}
-
-/* flip cards */
-
-#flip-card-container{
+/* products */
+#products-container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-color: rgb(255, 255, 255);
-    width: 80%;
-    height: 300px;
-    margin-left: 10%;
-    margin-right: 10%;
-    overflow: hidden;
+    grid-template-columns: 1fr 1fr 1fr auto;
+    background-color: rgba(0, 0, 0, 0);
+
+
 }
-
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-.flip-card {
-    background-color: transparent;
+.product-class{
+    height: 500px;
     float: left;
-    width: 100px;
-    height: auto;
-    min-height: 200px;
-    /* border: 1px solid #f1f1f1; */
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  }
-  
-  /* This container is needed to position the front and back side */
-  .flip-card-inner {
-    position: relative;
-    width: 300px;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  /* Position the front and back side */
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
-    backface-visibility: hidden;
-  }
-  
-  /* Style the front side (fallback if image is missing) */
-  .flip-card-front {
-    background-color: #bbb;
-    color: black;
-  }
-  
-  /* Style the back side */
-  .flip-card-back {
-    background-color: dodgerblue;
-    color: white;
-    transform: rotateY(180deg);
-  }
+    margin-left: auto;
+    margin-right: auto;
+    content: ;
 
 
 
+}
 /* footer */
 
 #footer-container{
@@ -307,13 +254,16 @@ body{
 /* psuedo */
 
 .nav-item:hover{
-    color:white;
+    color:rgb(255, 0, 221);
+    text-shadow: 0 0 10px rgb(255, 0, 221);
 }
 .nav-item:active{
-    color: white;
+    color: rgb(255, 0, 221);
+    text-shadow: 0 0 10px rgb(255, 0, 221);
 }
 #logo-big:hover{
-    color: white;
+    color: rgb(255, 0, 221);
+    text-shadow: 0 0 10px rgb(255, 0, 221);
 }
 
 /*animation */
@@ -367,4 +317,4 @@ body{
         left: -100%;
     }
     
-}
+} 
