--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,7 @@ body{
 }
 
 #logo-big{
+    color: black;
     height: 70px;
     float: left;
     padding-left: 5px;
@@ -410,12 +411,12 @@ body{
   }
   
   #footer-grid-container > #section-opening-hours{
-    text-align: right;
+    text-align: center;
     grid-area: b;
   }
   
   #footer-grid-container > #section-contact{
-  text-align: left;
+  text-align: center;
     grid-area: c;
   }
   
