--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,7 +324,8 @@ body{
 }
 
 #products-grid-container > .section-logo{
-    font-size: 2rem;
+    margin-bottom: 2rem;
+    font-size: 3rem;
     grid-area: a;
     text-align: center;
   }
@@ -505,4 +506,49 @@ body{
     to{
         visibility: hidden;
     }
+}
+
+@media screen and (max-width: 1000px) {
+    #products-grid-container{
+        margin: 5rem auto 5rem auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:  "a"
+                                "b"
+                                "e"
+                                "h"
+                                "c"
+                                "f"
+                                "i"
+                                "d"
+                                "g"
+                                "j";
+    }
+    
+    #products-grid-container > #product-1-info{
+
+    margin-bottom : 2rem;
+    grid-area: e;
+}
+
+#products-grid-container > #product-2-info{
+    grid-area: f;   
+    margin-bottom : 2rem;
+}
+
+#products-grid-container > #product-3-info{
+    grid-area: g;
+    margin-bottom : 2rem;
+}                        
+    
+        
+
+    }
+
+    #about{
+        padding-top: 2rem;
+        width: 90%;
+        margin-bottom: 2rem;
+    }
+    
 }
