--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ a:hover{
 
 /*settings for whole site*/
 body{
+    
     width: 100%;
     max-width: 1800px;
     margin-left: auto;
@@ -25,12 +26,18 @@ body{
     overflow-x: hidden;
 }
 
-
-
+#top{
+    position: sticky;
+    background-color: rgb(199, 255, 197);
+    width: 100%;
+    height: 100%;
+    max-width: 1800px;
+    z-index: 1;
+}
 /* welcome-animation */
 
 #welcome-animation-container{
-    z-index: 50000;
+    z-index: 500000;
     position: fixed;
     top: 0;
     left:0;
@@ -50,7 +57,7 @@ body{
     background-color: rgb(216, 216, 216);
     height: 50%;
     width: 50%;
-    z-index: 2020;
+    z-index: 100;
     animation-name: welcome-slide-up;
     animation-delay: 1s;
     animation-duration: 3s;
@@ -69,10 +76,7 @@ body{
     bottom: 8rem;
     right: 0;
     font-size: 2rem;
-    
 }
-
-
 
 #welcome-animation-upper-right{
     position: absolute;
@@ -81,7 +85,7 @@ body{
     width: 50%;
     top: 0;
     right: 0px;
-    z-index: 2015;
+    z-index: 100;
     animation-name: welcome-slide-right;
     animation-delay: 2.1s;
     animation-duration: 2s;
@@ -116,7 +120,7 @@ body{
     font-size: 3vw;
     bottom: 0;
     right: 0;
-    z-index: 2016;
+    z-index: 100;
     animation-name: welcome-slide-bottom;
     animation-delay: 2.3s;
     animation-duration: 2s;
@@ -148,7 +152,7 @@ body{
     width: 50%;
     bottom: 0;
     left: 0;
-    z-index: 2013;
+    z-index: 100;
     font-size: 3vw;;
     animation-name: welcome-slide-left;
     animation-delay: 2.7s;
@@ -181,7 +185,7 @@ body{
     min-height: 80px;
     text-transform: uppercase;
     background-color: rgb(255, 255, 255);   
-    z-index: 1003;
+    z-index: 99;
     display:grid;
     grid-template-columns: 1fr 3fr;
 }
@@ -212,37 +216,13 @@ body{
 
 .nav-item{
     float: right;
-    margin: 0  2rem;
+    /* margin: 0  2rem; */
     line-height: 70px;
 }
 
-.hamburger{
-    position:absolute;
-    right: 1rem;
-    top:1rem;
+#hamburger-container{
+    display:none;
 }
-
-.hamburger > button{
-    border: none;
-    background-color: rgba(240, 248, 255, 0);
-    font-size: 3rem;
-}
-
-#hamburger-item-container{
-    display: none;
-    position: absolute;
-    grid-template-columns: 1fr 1fr 1fr;
-    top: 5rem;
-    width:100%;
-    background-color: rgb(228, 228, 228);
-
-}
-
-.dropdown-item{
-    text-align: center;
-    font-size: 2rem;
-}
-
 
 
 /* presentation */
@@ -264,7 +244,8 @@ body{
 }
 
 #presentation-text{
-    font-size: 1.5rem;  
+    font-size: 1rem;
+    padding: 2rem;
 }
 
 #presentation-text h2{
@@ -323,14 +304,7 @@ body{
     }
    
 }
-#fun-quote-text {
-    margin-top: 5rem;
-    text-align: center;
-    animation-name: slide-in;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    margin-bottom: 10rem;
-} 
+
 
 /* products */
 
@@ -408,21 +382,30 @@ body{
     font-size: 2rem;
     
 }
+
+#fun-quote-text {
+    margin-top: 5rem;
+    text-align: center;
+    animation-name: slide-in;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    margin-bottom: 0rem;
+} 
 /* About */
 
 #about{
-    padding-top: 6rem;
+    padding-top: 3rem;
     width: 60%;
     margin: 0 auto;
     font-size: 1rem;
     margin-bottom: 5rem;
 }
 
+/* purchase form */
+
 #purchase-form{
-    width: 50%;
+    width: 80%;
     margin: 0 auto;
-    background-color: rgba(184, 184, 184, 0.452);
-    padding: 3rem;
     margin-bottom: 3rem;
 }
 
@@ -435,6 +418,8 @@ body{
 /* footer */
 
 #footer-grid-container{
+    width: 100%;
+    overflow: hidden;
     background-color: rgb(231, 231, 231);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -466,7 +451,7 @@ body{
   }
 
   #section-social{
-      word-spacing: 20rem;
+      word-spacing: auto;
       color: rgb(255, 255, 0);
       padding-bottom: 1rem;
       font-size: 2rem;
@@ -629,12 +614,44 @@ body{
         font-size: 1.5rem;
         line-height: 3rem;
         background-color: rgb(255, 255, 255);
-        display:none;
+        display: none;
         text-align: center;
     }
+
     #hamburger-container:hover a{
         display:block;
+        
+    }
+
+    #presentation-background{
+        padding: 1rem;
+        
+    }
+
+    #footer-grid-container{
+        background-color: rgb(231, 231, 231);
+        grid-template-columns: 1fr;
+        grid-template-areas:  "a"
+                              "b"
+                              "c"
+                              "d";
+      }
+      #section-social{
+          display: inline-block;
+        word-spacing: 2rem;
+        padding-bottom: 1rem;
+        font-size: 5rem;
+        width: 100%;
+    }
+
+    #owner-picture-container{
+
+    height: 8rem;
+    width: 8rem;
+    }
+
+    #plant-guy-image{
+        height: 15rem;
     }
       
 }
-
